--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AluraGeeks - Ecomerce</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/header.css">
+
 </head>
+
 <body>
-    
+    <header class="header">
+        <div class="header__container">
+            <div class="container">
+                <img class="header__logo" src="assets/Logo.svg" alt="logo Alura Geek">
+                <div class="header__search">
+                    <input class="header__search__input" type="text" placeholder="¿Qué deseas buscar?">
+                    <button class="header__search__button">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </button>
+                </div>
+            </div>
+            <button class="header__login__button">login</button>
+        </div>
+    </header>
 </body>
+
 </html>
