--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraGeeks - Ecomerce</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/hero.css">
 
 </head>
 
@@ -27,6 +29,16 @@
             <button class="header__login__button">login</button>
         </div>
     </header>
+
+    <section class="hero">
+        <div class="hero__container">
+            <h2 class="hero__title">Febrero Promocional</h2>
+            <p class="hero__subtext">Productos seleccionados con 33% de descuento</p>
+            <button class="hero__button">Ver Consolas</button>
+        </div>
+    </section>
+
+    
 </body>
 
 </html>
