finalizacion de el estilo

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="styles/hero.css">
     <link rel="stylesheet" href="styles/products.css">
     <link rel="stylesheet" href="styles/contact.css">
+    <link rel="stylesheet" href="styles/footer.css">
 
 </head>
 
@@ -198,9 +199,19 @@
                         <label class="contact__form__label" for="username">Nombre</label>
                         <div class="contact__form__slash"></div>
                     </div>
+
+                    <div class="contact__form__item">
+                        <textarea class="contact__form__textarea" name="mensaje" placeholder="Escribe tu mensaje" cols="30" rows="10" required></textarea>
+                        <div class="contact__form__slash"></div>
+                    </div>
                 </fieldset>
             </form>
         </div>
+    </section>
+
+    <section class="footer">
+        <h3 class="footer__title">Desarrollado por Fulana de Tal</h3>
+        <p class="footer__subtext">2021</p>
     </section>
 </body>
 
