--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="styles/products.css">
     <link rel="stylesheet" href="styles/contact.css">
     <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="styles/responsive.css">
 
 </head>
 
@@ -182,8 +183,9 @@
 
     <section class="contact">
         <div class="contact__container">
-            <img src="assets/Logo.svg" alt="logo">
+            <img class="contact__logo__desktop"src="assets/Logo.svg" alt="logo">
             <ul class="contact__nav">
+                <img class="contact__logo__tablet" src="assets/Logo.svg" alt="logo">
                 <li class="contact__nav__item">Quienes somos</li>
                 <li class="contact__nav__item">Politica de privacidad</li>
                 <li class="contact__nav__item">Programas de fidelidad</li>
