pagina editar productos finalizada

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </button>
                 </div>
             </div>
-            <button class="header__login__button">login</button>
+            <button class="header__login__button" onclick="location.href='screens/login.html'">login</button>
         </div>
     </header>
 
@@ -206,6 +206,8 @@
                         <textarea class="contact__form__textarea" name="mensaje" placeholder="Escribe tu mensaje" cols="30" rows="10" required></textarea>
                         <div class="contact__form__slash"></div>
                     </div>
+
+                    <button class="hero__button">Enviar mensaje</button>
                 </fieldset>
             </form>
         </div>
