links a las paginas

--- a/index.html
+++ b/index.html
@@ -53,37 +53,37 @@
                     <img class="products__item__img"  src="assets/producto1.jpg" alt="foto product1">
                     <h4>producto XYZ</h4>
                     <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="#">Ver producto</a>
+                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
                 </li>
                 <li class="products__item">
                     <img class="products__item__img"  src="assets/producto2.jpg" alt="foto product1">
                     <h4>producto XYZ</h4>
                     <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="#">Ver producto</a>
+                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
                 </li>
                 <li class="products__item">
                     <img class="products__item__img"  src="assets/producto3.jpg" alt="foto product1">
                     <h4>producto XYZ</h4>
                     <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="#">Ver producto</a>
+                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
                 </li>
                 <li class="products__item">
                     <img class="products__item__img"  src="assets/producto4.jpg" alt="foto product1">
                     <h4>producto XYZ</h4>
                     <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="#">Ver producto</a>
+                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
                 </li>
                 <li class="products__item">
                     <img class="products__item__img"  src="assets/producto5.jpg" alt="foto product1">
                     <h4>producto XYZ</h4>
                     <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="#">Ver producto</a>
+                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
                 </li>
                 <li class="products__item">
                     <img class="products__item__img"  src="assets/producto6.jpg" alt="foto product1">
                     <h4>producto XYZ</h4>
                     <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="#">Ver producto</a>
+                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
                 </li>
                 
             </ul>
@@ -99,37 +99,37 @@
                     <img class="products__item__img"  src="assets/producto1.jpg" alt="foto product1">
                     <h4>producto XYZ</h4>
                     <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="#">Ver producto</a>
+                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
                 </li>
                 <li class="products__item">
                     <img class="products__item__img"  src="assets/producto2.jpg" alt="foto product1">
                     <h4>producto XYZ</h4>
                     <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="#">Ver producto</a>
+                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
                 </li>
                 <li class="products__item">
                     <img class="products__item__img"  src="assets/producto3.jpg" alt="foto product1">
                     <h4>producto XYZ</h4>
                     <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="#">Ver producto</a>
+                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
                 </li>
                 <li class="products__item">
                     <img class="products__item__img"  src="assets/producto4.jpg" alt="foto product1">
                     <h4>producto XYZ</h4>
                     <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="#">Ver producto</a>
+                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
                 </li>
                 <li class="products__item">
                     <img class="products__item__img"  src="assets/producto5.jpg" alt="foto product1">
                     <h4>producto XYZ</h4>
                     <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="#">Ver producto</a>
+                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
                 </li>
                 <li class="products__item">
                     <img class="products__item__img"  src="assets/producto6.jpg" alt="foto product1">
                     <h4>producto XYZ</h4>
                     <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="#">Ver producto</a>
+                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
                 </li>
                 
             </ul>
@@ -145,37 +145,37 @@
                     <img class="products__item__img"  src="assets/producto1.jpg" alt="foto product1">
                     <h4>producto XYZ</h4>
                     <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="#">Ver producto</a>
+                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
                 </li>
                 <li class="products__item">
                     <img class="products__item__img"  src="assets/producto2.jpg" alt="foto product1">
                     <h4>producto XYZ</h4>
                     <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="#">Ver producto</a>
+                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
                 </li>
                 <li class="products__item">
                     <img class="products__item__img"  src="assets/producto3.jpg" alt="foto product1">
                     <h4>producto XYZ</h4>
                     <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="#">Ver producto</a>
+                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
                 </li>
                 <li class="products__item">
                     <img class="products__item__img"  src="assets/producto4.jpg" alt="foto product1">
                     <h4>producto XYZ</h4>
                     <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="#">Ver producto</a>
+                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
                 </li>
                 <li class="products__item">
                     <img class="products__item__img"  src="assets/producto5.jpg" alt="foto product1">
                     <h4>producto XYZ</h4>
                     <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="#">Ver producto</a>
+                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
                 </li>
                 <li class="products__item">
                     <img class="products__item__img"  src="assets/producto6.jpg" alt="foto product1">
                     <h4>producto XYZ</h4>
                     <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="#">Ver producto</a>
+                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
                 </li>                
             </ul>
         </div>
