--- a/screens/Productos.html
+++ b/screens/Productos.html
@@ -36,7 +36,7 @@
         <div class="products__line">
             <div class="products__line__head">
                 <h3 class="products__line__title">Todos los Productos</h3>
-                <button class="main__button">Agregar Producto </button>
+                <button class="main__button" onclick="location.href='../screens/addProductos.html'" >Agregar Producto </button>
             </div>
             <ul class="products__list">
                 
