--- a/screens/login.html
+++ b/screens/login.html
@@ -32,7 +32,7 @@
     </header>
 
     <section class="products">
-        <form action="" class="main__container">
+        <form action="../screens/Productos.html" class="main__container">
             <fieldset class="main__form__container">
                 <legend class="main__form__title">Iniciar Sesión</legend>
 
@@ -43,12 +43,12 @@
                 </div>
 
                 <div class="contact__form__item">
-                    <input class="contact__form__input" type="text" required>
+                    <input class="contact__form__input" type="password" required>
                     <label class="contact__form__label" for="password">Escriba su contraseña</label>
                     <div class="contact__form__slash"></div>
                 </div>
 
-                <button class="main__button">Entrar</button>
+                <button class="main__button" type="submit">Entrar</button>
             </fieldset>
         </form>
     </section>
