--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="hero__container">
             <h2 class="hero__title">Febrero Promocional</h2>
             <p class="hero__subtext">Productos seleccionados con 33% de descuento</p>
-            <button class="hero__button">Ver Consolas</button>
+            <button class="hero__button" onclick="location.href='#Consolas'">Ver Consolas</button>
         </div>
     </section>
 
@@ -89,7 +89,7 @@
             </ul>
         </div>
 
-        <div class="products__line">
+        <div id="Consolas" class="products__line">
             <div class="products__line__head">
                 <h3 class="products__line__title">Consolas</h3>
                 <button class="products__line__button">Ver todo <i class="fa-solid fa-arrow-right"></i></button>
@@ -197,13 +197,13 @@
                 <fieldset>
                     <legend class="contact__form__title">Hable con Nosotros</legend>
                     <div class="contact__form__item">
-                        <input class="contact__form__input" type="text" required>
+                        <input class="contact__form__input" type="text" required maxlength="40">
                         <label class="contact__form__label" for="username">Nombre</label>
                         <div class="contact__form__slash"></div>
                     </div>
 
                     <div class="contact__form__item">
-                        <textarea class="contact__form__textarea" name="mensaje" placeholder="Escribe tu mensaje" cols="30" rows="10" required></textarea>
+                        <textarea class="contact__form__textarea" name="mensaje" placeholder="Escribe tu mensaje" cols="30" rows="10" required maxlength="120"></textarea>
                         <div class="contact__form__slash"></div>
                     </div>
 
