validacion contact form

--- a/screens/addProductos.html
+++ b/screens/addProductos.html
@@ -37,8 +37,7 @@
                 <legend class="main__form__title">Agregar Nuevo Producto</legend>
 
                 <div class="contact__form__item">
-                    <input class="contact__form__input" type="text" required>
-                    <label class="contact__form__label" for="url">URL de la imagen</label>
+                    <input class="contact__form__input  file" type="file" accept="image/png, image/gif, image/jpeg" required>
                     <div class="contact__form__slash"></div>
                 </div>
 
@@ -49,19 +48,19 @@
                 </div>
 
                 <div class="contact__form__item">
-                    <input class="contact__form__input" type="text" required>
+                    <input class="contact__form__input" type="text" maxlength="20" required>
                     <label class="contact__form__label">Nombre del producto</label>
                     <div class="contact__form__slash"></div>
                 </div>
 
                 <div class="contact__form__item">
-                    <input class="contact__form__input" type="text" required>
+                    <input class="contact__form__input" type="number" required>
                     <label class="contact__form__label">Precio del producto</label>
                     <div class="contact__form__slash"></div>
                 </div>
 
                 <div class="contact__form__item">
-                    <input class="contact__form__input" type="text" required>
+                    <input class="contact__form__input" type="text" maxlength="150" required>
                     <label class="contact__form__label">Descripcion del producto</label>
                     <div class="contact__form__slash"></div>
                 </div>
