--- a/screens/addProductos.html
+++ b/screens/addProductos.html
@@ -32,35 +32,35 @@
     </header>
 
     <section class="products">
-        <form action="" class="main__container">
+        <form action="submit" class="main__container" data-form>
             <fieldset class="main__form__container">
                 <legend class="main__form__title">Agregar Nuevo Producto</legend>
 
                 <div class="contact__form__item">
-                    <input class="contact__form__input  file" type="file" accept="image/png, image/gif, image/jpeg" required>
+                    <input class="contact__form__input  file" type="file" accept="image/png, image/gif, image/jpeg" required name="imagen">
                     <div class="contact__form__slash"></div>
                 </div>
 
                 <div class="contact__form__item">
-                    <input class="contact__form__input" type="text" required>
+                    <input class="contact__form__input" type="text" required name="categoria">
                     <label class="contact__form__label">Categoria</label>
                     <div class="contact__form__slash"></div>
                 </div>
 
                 <div class="contact__form__item">
-                    <input class="contact__form__input" type="text" maxlength="20" required>
+                    <input class="contact__form__input" type="text" maxlength="20" required name="nombre">
                     <label class="contact__form__label">Nombre del producto</label>
                     <div class="contact__form__slash"></div>
                 </div>
 
                 <div class="contact__form__item">
-                    <input class="contact__form__input" type="number" required>
+                    <input class="contact__form__input" type="number" required name="precio">
                     <label class="contact__form__label">Precio del producto</label>
                     <div class="contact__form__slash"></div>
                 </div>
 
                 <div class="contact__form__item">
-                    <input class="contact__form__input" type="text" maxlength="150" required>
+                    <input class="contact__form__input" type="text" maxlength="150" required name="descripcion">
                     <label class="contact__form__label">Descripcion del producto</label>
                     <div class="contact__form__slash"></div>
                 </div>
@@ -104,6 +104,7 @@
         <h3 class="footer__title">Desarrollado por Fulana de Tal</h3>
         <p class="footer__subtext">2021</p>
     </section>
-    
+<script src="../controllers/addproductos.controller.js" type="module"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js"></script>   
 </body>
 </html>
