conexion pagina principal con el server

--- a/index.html
+++ b/index.html
@@ -42,143 +42,7 @@
         </div>
     </section>
 
-    <section class="products">
-        <div class="products__line">
-            <div class="products__line__head">
-                <h3 class="products__line__title">Star Wars</h3>
-                <button class="products__line__button">Ver todo <i class="fa-solid fa-arrow-right"></i></button>
-            </div>
-            <ul class="products__list">
-                <li class="products__item">
-                    <img class="products__item__img"  src="assets/producto1.jpg" alt="foto product1">
-                    <h4>producto XYZ</h4>
-                    <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
-                </li>
-                <li class="products__item">
-                    <img class="products__item__img"  src="assets/producto2.jpg" alt="foto product1">
-                    <h4>producto XYZ</h4>
-                    <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
-                </li>
-                <li class="products__item">
-                    <img class="products__item__img"  src="assets/producto3.jpg" alt="foto product1">
-                    <h4>producto XYZ</h4>
-                    <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
-                </li>
-                <li class="products__item">
-                    <img class="products__item__img"  src="assets/producto4.jpg" alt="foto product1">
-                    <h4>producto XYZ</h4>
-                    <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
-                </li>
-                <li class="products__item">
-                    <img class="products__item__img"  src="assets/producto5.jpg" alt="foto product1">
-                    <h4>producto XYZ</h4>
-                    <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
-                </li>
-                <li class="products__item">
-                    <img class="products__item__img"  src="assets/producto6.jpg" alt="foto product1">
-                    <h4>producto XYZ</h4>
-                    <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
-                </li>
-                
-            </ul>
-        </div>
-
-        <div id="Consolas" class="products__line">
-            <div class="products__line__head">
-                <h3 class="products__line__title">Consolas</h3>
-                <button class="products__line__button">Ver todo <i class="fa-solid fa-arrow-right"></i></button>
-            </div>
-            <ul class="products__list">
-                <li class="products__item">
-                    <img class="products__item__img"  src="assets/producto1.jpg" alt="foto product1">
-                    <h4>producto XYZ</h4>
-                    <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
-                </li>
-                <li class="products__item">
-                    <img class="products__item__img"  src="assets/producto2.jpg" alt="foto product1">
-                    <h4>producto XYZ</h4>
-                    <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
-                </li>
-                <li class="products__item">
-                    <img class="products__item__img"  src="assets/producto3.jpg" alt="foto product1">
-                    <h4>producto XYZ</h4>
-                    <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
-                </li>
-                <li class="products__item">
-                    <img class="products__item__img"  src="assets/producto4.jpg" alt="foto product1">
-                    <h4>producto XYZ</h4>
-                    <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
-                </li>
-                <li class="products__item">
-                    <img class="products__item__img"  src="assets/producto5.jpg" alt="foto product1">
-                    <h4>producto XYZ</h4>
-                    <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
-                </li>
-                <li class="products__item">
-                    <img class="products__item__img"  src="assets/producto6.jpg" alt="foto product1">
-                    <h4>producto XYZ</h4>
-                    <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
-                </li>
-                
-            </ul>
-        </div>
-
-        <div class="products__line">
-            <div class="products__line__head">
-                <h3 class="products__line__title">Diversos</h3>
-                <button class="products__line__button">Ver todo <i class="fa-solid fa-arrow-right"></i></button>
-            </div>
-            <ul class="products__list">
-                <li class="products__item">
-                    <img class="products__item__img"  src="assets/producto1.jpg" alt="foto product1">
-                    <h4>producto XYZ</h4>
-                    <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
-                </li>
-                <li class="products__item">
-                    <img class="products__item__img"  src="assets/producto2.jpg" alt="foto product1">
-                    <h4>producto XYZ</h4>
-                    <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
-                </li>
-                <li class="products__item">
-                    <img class="products__item__img"  src="assets/producto3.jpg" alt="foto product1">
-                    <h4>producto XYZ</h4>
-                    <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
-                </li>
-                <li class="products__item">
-                    <img class="products__item__img"  src="assets/producto4.jpg" alt="foto product1">
-                    <h4>producto XYZ</h4>
-                    <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
-                </li>
-                <li class="products__item">
-                    <img class="products__item__img"  src="assets/producto5.jpg" alt="foto product1">
-                    <h4>producto XYZ</h4>
-                    <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
-                </li>
-                <li class="products__item">
-                    <img class="products__item__img"  src="assets/producto6.jpg" alt="foto product1">
-                    <h4>producto XYZ</h4>
-                    <span class="products__item__price">$ 60,00</span>
-                    <a class="products__item__link" href="screens/producto.html">Ver producto</a>
-                </li>                
-            </ul>
-        </div>
+    <section class="products" data-list-principal>
     </section>
 
     <section class="contact">
@@ -217,6 +81,7 @@
         <h3 class="footer__title">Desarrollado por Fulana de Tal</h3>
         <p class="footer__subtext">2021</p>
     </section>
+    <script src="controllers/principal.controller.js"></script>
 </body>
 
 </html>
